appscore/k8s/grafana.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: logs
          mountPath: /var/log/grafana
        - name: grafana-config
          mountPath: /etc/grafana/grafana.ini
          subPath: grafana.ini
        - name: loki-config
          mountPath: /etc/loki/loki-config.yaml
          subPath: loki-config.yaml
      volumes:
      - name: logs
        hostPath:
          path: /data/grafana/logs
          type: DirectoryOrCreate
      - name: grafana-config
        configMap:
          name: grafana-config
      - name: loki-config
        configMap:
          name: loki-config
