appscore/k8s/liveness.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-readiness-liveness-pod
  labels:
    test: readiness-liveness
spec:
  containers:
    - name: readiness-liveness
      image: gcr.io/kuar-demo/kuard-amd64:1
      ports:
        - containerPort: 8080
      livenessProbe:
        httpGet:
          path: /healthz
          port: 8080
        initialDelaySeconds: 3
        periodSeconds: 3
        failureThreshold: 3
      readinessProbe:
        httpGet:
          path: /ready
          port: 8080
        initialDelaySeconds: 3
        periodSeconds: 3
        failureThreshold: 3
